Android accessibility should not treat whitespace-only nodes as interesting.

When linearly navigating through nodes in the accessibility tree, don't treat
a leaf node with text as interesting if the text is only whitespace.
Also fix an issue where requesting the first "interesting" node
from the root of the tree could sometimes return the root itself, leading to
a cycle.

BUG=656779

Review-Url: https://codereview.chromium.org/2427813002
Cr-Commit-Position: refs/heads/master@{#427172}

Former-commit-id: 100ba42f5f6b4ec409c5106749a65bdbb04c4328